<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localisation_aruco_marker</name>
  <version>0.0.0</version>
  <description>TODO: Configure for ROS2 implementation</description>
  <maintainer email="natalie.kehoe10@gmail.com">nataliekehoe</maintainer>
  <license>Apache License 2.0</license>
  
  <!-- Specify tools needed to compile packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->

  <!-- Old ROS 1 packages - DO NOT USE!!! Only for example. -->
  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <!-- <exec_depend>roscpp</exec_depend> -->
  <!-- <exec_depend>rospy</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->

  <!-- ROS 2 Packages -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Dependencies for testing only -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
